Initial Interface Built, Box Generation - Slider Logic still FAULTY

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div>
                 <label for="fader">Num-Boxes</label>
                 <input type="range" id="fader" min="16" max="64" value="16" step="1" aria-valuemin="16"
-                    aria-valuemax="64" aria-valuenow="16" oninput="outputUpdate(value)">
+                    aria-valuemax="64" aria-valuenow="16" onchange="outputUpdate(value)">
                 <output for="fader" id="num-box">16</output>
             </div>
             <!-- Will Contain a checkbox and a slider to control #boxes that are generated-->
