--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
                 <label for="rgb">RGB</label>
             </div>
             <div>
-                <label for="fader">Num-Boxes</label>
-                <input type="range" id="fader" min="16" max="64" value="16" step="1" aria-valuemin="16"
-                    aria-valuemax="64" aria-valuenow="16" onchange="outputUpdate(value)">
-                <output for="fader" id="num-box">16</output>
+                <label for="slider">Num-Boxes</label>
+                <input type="range" id="slider" min="16" max="32" value="16" step="1" aria-valuemin="16"
+                    aria-valuemax="32" aria-valuenow="16" 
+                    >
+                <output for="slider" id="num-box">16</output>
             </div>
-            <!-- Will Contain a checkbox and a slider to control #boxes that are generated-->
+
         </div>
         <div id="main-grid">
             <!-- Contains #boxes that have been selected through the slider.-->
