Finished Basic Project, GUI Development Remains

--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
                 <label for="rgb">RGB</label>
             </div>
             <div>
-                <label for="slider">Num-Boxes</label>
-                <input type="range" id="slider" min="16" max="32" value="16" step="1" aria-valuemin="16"
-                    aria-valuemax="32" aria-valuenow="16" 
-                    >
-                <output for="slider" id="num-box">16</output>
+                <label for="slider">Clarity Level</label>
+                <input type="range" id="slider" min="10" max="64" value="10" step="1" aria-valuemin="10"
+                    aria-valuemax="64" aria-valuenow="10">
+                <output for="slider" id="num-box">10</output>
+            </div>
+            <div>
+                <button id="clr">Clear</button>
             </div>
 
         </div>
